Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17530

errors in qmldir file are not reported

    XMLWordPrintable

Details

    • 220758a51ba70ddfc21894c737b012a171a2cfe2

    Description

      My qmldir file has

      foo bar foo bar
      internal foo bar foo
      Test 1.0 Test.qml
      

      and there is a Test.qml in the same directory. Using the module with

      import mymodule 1.0
      

      works just fine and it does not complain about the invalid lines - even though the qmldir parser recognizes the errors.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            ckamm Christian Kamm
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes