Report errors encountered by qmldir parser Task-number: QTBUG-17530 Reviewed-by: pending